Complete Dicee iOS app with random dice rolling, animations, and responsive design

--- a/Dicee-iOS13/Base.lproj/Main.storyboard
+++ b/Dicee-iOS13/Base.lproj/Main.storyboard
@@ -17,26 +17,43 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="GreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="ovJ-bB-e7X">
-                                <rect key="frame" x="0.0" y="-7" width="414" height="903"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="ovJ-bB-e7X">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <constraints>
+                                    <constraint firstItem="ovJ-bB-e7X" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="bg1"/>
+                                    <constraint firstItem="ovJ-bB-e7X" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="bg2"/>
+                                    <constraint firstItem="ovJ-bB-e7X" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="bg3"/>
+                                    <constraint firstItem="ovJ-bB-e7X" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="bg4"/>
+                                </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="DiceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="cCW-cb-DRa">
-                                <rect key="frame" x="87" y="145" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DiceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="cCW-cb-DRa">
+                                <rect key="frame" x="109" y="145" width="196" height="128"/>
+                                <constraints>
+                                    <constraint firstItem="cCW-cb-DRa" firstAttribute="width" constant="196" id="logo1"/>
+                                    <constraint firstItem="cCW-cb-DRa" firstAttribute="height" constant="128" id="logo2"/>
+                                </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="DiceOne" translatesAutoresizingMaskIntoConstraints="NO" id="4aN-Ga-51v">
-                                <rect key="frame" x="38" y="375" width="120" height="120"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DiceOne" translatesAutoresizingMaskIntoConstraints="NO" id="4aN-Ga-51v">
+                                <rect key="frame" x="87" y="375" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstItem="4aN-Ga-51v" firstAttribute="width" constant="120" id="dice1w"/>
+                                    <constraint firstItem="4aN-Ga-51v" firstAttribute="height" constant="120" id="dice1h"/>
+                                </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="DiceOne" translatesAutoresizingMaskIntoConstraints="NO" id="HFS-d2-WhT">
-                                <rect key="frame" x="245" y="375" width="120" height="120"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DiceOne" translatesAutoresizingMaskIntoConstraints="NO" id="HFS-d2-WhT">
+                                <rect key="frame" x="207" y="375" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstItem="HFS-d2-WhT" firstAttribute="width" constant="120" id="dice2w"/>
+                                    <constraint firstItem="HFS-d2-WhT" firstAttribute="height" constant="120" id="dice2h"/>
+                                </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jGx-25-ab3">
-                                <rect key="frame" x="154" y="626" width="107" height="82"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jGx-25-ab3">
+                                <rect key="frame" x="153.66666666666666" y="626" width="107" height="82"/>
                                 <color key="backgroundColor" red="0.60784313729999995" green="0.10980392160000001" blue="0.1215686275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="jGx-25-ab3" firstAttribute="width" constant="107" id="btn1"/>
+                                    <constraint firstItem="jGx-25-ab3" firstAttribute="height" constant="82" id="btn2"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Roll">
                                     <backgroundConfiguration key="background"/>
@@ -50,6 +67,16 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="cCW-cb-DRa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="logo3"/>
+                            <constraint firstItem="cCW-cb-DRa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="logo4"/>
+                            <constraint firstItem="4aN-Ga-51v" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="87" id="dice1l"/>
+                            <constraint firstItem="4aN-Ga-51v" firstAttribute="top" secondItem="cCW-cb-DRa" secondAttribute="bottom" constant="102" id="dice1t"/>
+                            <constraint firstItem="HFS-d2-WhT" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" constant="-87" id="dice2r"/>
+                            <constraint firstItem="HFS-d2-WhT" firstAttribute="top" secondItem="cCW-cb-DRa" secondAttribute="bottom" constant="102" id="dice2t"/>
+                            <constraint firstItem="jGx-25-ab3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="btn3"/>
+                            <constraint firstItem="jGx-25-ab3" firstAttribute="top" secondItem="4aN-Ga-51v" secondAttribute="bottom" constant="131" id="btn4"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="diceImageView1" destination="4aN-Ga-51v" id="tVG-Iz-buA"/>
